[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "nagl"
authors = [ {name = "Simon Boothroyd"} ]
description = "A playground for applying graph convolutional networks to molecules."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
nagl = "nagl.cli:cli"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.setuptools.package-data]
"nagl" = ["reporting/template.html"]
